--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,14 @@
 /* demo css file */
+div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+img{
+    max-width: 400px;
+}
 h1{
     color: crimson;
+    
 }
